--- a/clue4js.plist
+++ b/clue4js.plist
@@ -11,7 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>http://115.236.101.203:28080/ipa/clue3.0.6fix3.ipa</string>
+                        <string>http://115.236.101.203:28080/ipa/clue3.0.6.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
