--- a/clue4js.plist
+++ b/clue4js.plist
@@ -11,7 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>http://115.236.101.203:28080/ipa/clue_3.0.6_4_20161201</string>
+                        <string>http://115.236.101.203:28080/ipa/clue_3.0.6_5_20161205.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
