--- a/clue4js.plist
+++ b/clue4js.plist
@@ -11,7 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>http://115.236.101.203:28080/ipa/clue_1.0.0_20170116.ipa</string>
+                        <string>http://115.236.101.203:28080/ipa/clue_jiangsu_1.0.1_20170119.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
@@ -19,7 +19,7 @@
                     <key>bundle-identifier</key>
                     <string>com.tianque.clue.jiangsu</string>
                     <key>bundle-version</key>
-                    <string>1.0.0</string>
+                    <string>1.0.1</string>
                     <key>kind</key>
                     <string>software</string>
                     <key>title</key>
